SwaggerConfig Refactoring